@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n pagination %}
 
 {% block title %} I'm TualatriX {% endblock %}
 
 {% block content %}
 	{% if favourites %}
+		{% pre_pagination favourites page %}
 		{% for favourite in favourites %}
 		<div class="favourite" id="favourite-{{ favourite.id }}">
 			<h2><a href="{{ favourite.get_absolute_url }}" rel="bookmark" title="Permanent Link to {{ favourite.title }}">{{ favourite.title }}</a></h2>
@@ -21,4 +22,5 @@
 	{% else %}
 		No artile yet!
 	{% endif %}
+	{% do_pagination %}
 {% endblock %}
