@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n pagination %}
 
 {% block title %} I'm TualatriX {% endblock %}
 
 {% block content %}
 	{% if posts %}
+		{% pre_pagination posts page %}
+
 		{% for post in posts %}
 		<div class="post" id="post-{{ post.id }}">
 			{% include "post/title.html" %}
@@ -20,4 +22,5 @@
 	{% else %}
 		No artile yet!
 	{% endif %}
+	{% do_pagination %}
 {% endblock %}
